--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,5 +33,8 @@
     "storeLocator": "Store locator",
     "cart": "Cart",
     "shoppingBagEmpty": "You have no items in your Shopping Bag.",
-    "allApparel":"All apparel"
+    "allApparel":"All apparel",
+    "addToBasket": "Add To Basket",
+    "size": "Size",
+    "rating": "Rating"
 }
